remove "item.cchTextMax=0" line from SetItem() as it doesn't seem to make any sense (see #10687)

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@60055 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775